test/1.2/errors/T_WUNUSED_DML12.dml
/*
  © 2021-2022 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.2;

device test;

/// COMPILE-ONLY

import "dml12-compatibility.dml";

// We omit SCAN-FOR-TAGS on purpose, warning annotations from this file
// are applicable to DML 1.4 only
/// WARNING WEXPERIMENTAL_UNMAPPED WUNUSED_DML12.dml
import "../../1.4/errors/WUNUSED_DML12.dml";
